changed model and font

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,11 @@ h1{
 
 #tempRead{
     color:aliceblue;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
 #humRead{
     color:aliceblue;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
