--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     overflow-x: hidden;
+    color:aliceblue;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body svg{
@@ -13,16 +15,14 @@ body svg{
 h1{
     text-align: center;
     color: aliceblue;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #tempRead{
-    color:aliceblue;
+    color:rgb(0, 136, 255);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-
-
+   
 #humRead{
-    color:aliceblue;
+    color:rgb(255, 136, 0);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
